--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.0.4'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.1'
 
