로컬 -> s3로 전환 예정

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ build/
 *.yml
 **/resources/data.sql
 **/resources/TODOLIST.text
+**/resources/static/profileImage/userImg/**
 
 ### STS ###
 .apt_generated
