--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     // jwt
     implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis:3.0.4'
+    // OAuth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.1'
     // aws
