--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+*.yml
+**/resources/data.sql
+**/resources/TODOLIST.text
+**/resources/static/profileImage/userImg/**
+
 ### STS ###
 .apt_generated
 .classpath
